--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "license": "ISC",
   "description": "同步您的设备上所有以 Visual Studio Code 为内核的编辑器配置",
   "dependencies": {
+    "chalk": "^5.6.2",
     "fs-extra": "^11.3.2",
-    "inquirer": "^12.11.0"
+    "inquirer": "^12.11.0",
+    "ora": "^9.0.0"
   },
   "repository": {
     "type": "git",
