feat: 添加 ESLint 配置并优化代码风格
- 新增 eslint.config.js 配置文件
- 使用 node: 前缀导入核心模块
- 统一代码格式和引号风格
- 移除的 project-manager 配置
- 添加 printf 工具函数替代 console.log
- 更新 package.json 版本和依赖

--- a/package.json
+++ b/package.json
@@ -1,19 +1,10 @@
 {
   "name": "sync-code-editor",
-  "version": "1.0.0",
-  "main": "index.js",
-  "bin": {
-    "sync-code-editor": "./bin/index.js"
-  },
+  "version": "1.0.1",
+  "description": "同步您的设备上所有以 Visual Studio Code 为内核的编辑器配置",
   "author": "onlymisaky@gmail.com",
   "license": "ISC",
-  "description": "同步您的设备上所有以 Visual Studio Code 为内核的编辑器配置",
-  "dependencies": {
-    "chalk": "^5.6.2",
-    "fs-extra": "^11.3.2",
-    "inquirer": "^12.11.0",
-    "ora": "^9.0.0"
-  },
+  "homepage": "https://github.com/onlymisaky/sync-code-editor",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/onlymisaky/sync-code-editor.git"
@@ -21,5 +12,26 @@
   "bugs": {
     "url": "https://github.com/onlymisaky/sync-code-editor/issues"
   },
-  "homepage": "https://github.com/onlymisaky/sync-code-editor"
+  "main": "index.js",
+  "bin": {
+    "sync-code-editor": "./bin/index.js"
+  },
+  "files": [
+    "bin",
+    "lib"
+  ],
+  "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  },
+  "dependencies": {
+    "chalk": "^5.6.2",
+    "fs-extra": "^11.3.2",
+    "inquirer": "^12.11.0",
+    "ora": "^9.0.0"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^6.2.0",
+    "eslint": "^9.39.1"
+  }
 }
